Remove the header peers API. There is no reason a server would ever expose this data to connecting users.
